some refactoring & narrowing photo areas

--- a/index.html
+++ b/index.html
@@ -1,58 +1,63 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Sort-and-Peace</title>
-</head>
-<body>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/vendor/bootstrap.min.css"/>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/flat-ui.css"/>
-	<link rel="stylesheet" href="css/tolstoy.css"/>
-	 <!-- Latest Sortable -->
-	<script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
 
-<div class="container-fluid">
+	<head>
+	  <meta charset="utf-8">
+	  <title>Sort-and-Peace</title>
+	</head>
 
-<h1>Sort-and-Peace</h1>
+	<body>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/vendor/bootstrap.min.css"/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/flat-ui.css"/>
+		<link rel="stylesheet" href="css/tolstoy.css"/>
+		 <!-- Latest Sortable -->
+		<script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
 
-	<div class="row">
+		<div class="container-fluid">
 
-		<div class="col-xs-6 col-sm-4">
-			<div id="pierre" class="photoarea">
-				<h3>Pierre</h3>
-				<div class="the_pierres"><img class="img-circle" src="img/1956_pierre.jpg"></div>
-				<div class="the_pierres"><img class="img-circle" src="img/1967_pierre.jpg"></div>
-				<div class="the_pierres"><img class="img-circle" src="img/1972_pierre.jpg"></div>
-				<div class="the_pierres"><img class="img-circle" src="img/2007_pierre.jpg"></div>
-				<div class="the_pierres"><img class="img-circle" src="img/2016_pierre.png"></div>
+		<h1>Sort-and-Peace</h1>
+
+			<div class="row">
+
+				<div class="col-xs-6 col-sm-4">
+					<div id="pierre" class="photoarea">
+						<h3>Pierre</h3>
+							<img class="the_pierres img-circle" src="img/1956_pierre.jpg">
+							<img class="the_pierres img-circle" src="img/1967_pierre.jpg">
+							<img class="the_pierres img-circle" src="img/1972_pierre.jpg">
+							<img class="the_pierres img-circle" src="img/2007_pierre.jpg">
+							<img class="the_pierres img-circle" src="img/2016_pierre.png">
+					</div>
+				</div>
+
+				<div class="col-xs-6 col-sm-4">
+					<div id="natasha" class="photoarea">
+						<h3>Natasha</h3>
+							<img class="the_natashas img-circle" src="img/1956_natasha.jpg">
+							<img class="the_natashas img-circle" src="img/1967_natasha.jpg">
+							<img class="the_natashas img-circle" src="img/1972_natasha.jpg">
+							<img class="the_natashas img-circle" src="img/2007_natasha.jpg">
+							<img class="the_natashas img-circle" src="img/2016_natasha.jpg">
+					 </div>
+				</div>
+
+				<div class="col-xs-6 col-sm-4">
+					<div id="andrei" class="photoarea">
+						<h3>Andrei</h3>
+							<img class="the_andreis img-circle" src="img/1956_andrei.jpg">
+							<img class="the_andreis img-circle" src="img/1967_andrei.jpg">
+							<img class="the_andreis img-circle" src="img/1972_andrei.jpg">
+							<img class="the_andreis img-circle" src="img/2007_andrei.jpg">
+							<img class="the_andreis img-circle" src="img/2016_andrei.png">
+					</div>
+				</div>
+
 			</div>
-		</div>
 
-		<div class="col-xs-6 col-sm-4">
-			<div id="natasha" class="photoarea">
-				<h3>Natasha</h3>
-				<div class="the_natashas"><img class="img-circle" src="img/1956_natasha.jpg"></div>
-				<div class="the_natashas"><img class="img-circle" src="img/1967_natasha.jpg"></div>
-				<div class="the_natashas"><img class="img-circle" src="img/1972_natasha.jpg"></div>
-				<div class="the_natashas"><img class="img-circle" src="img/2007_natasha.jpg"></div>
-				<div class="the_natashas"><img class="img-circle" src="img/2016_natasha.jpg"></div>
-			 </div>
 		</div>
+		
+		<script src="js/tolstoy.js"></script>
 
-		<div class="col-xs-6 col-sm-4">
-			<div id="andrei" class="photoarea">
-				<h3>Andrei</h3>
-				<div class="the_andreis"><img class="img-circle" src="img/1956_andrei.jpg"></div>
-				<div class="the_andreis"><img class="img-circle" src="img/1967_andrei.jpg"></div>
-				<div class="the_andreis"><img class="img-circle" src="img/1972_andrei.jpg"></div>
-				<div class="the_andreis"><img class="img-circle" src="img/2007_andrei.jpg"></div>
-				<div class="the_andreis"><img class="img-circle" src="img/2016_andrei.png"></div>
-			</div>
-		</div>
-
-	</div>
-</div>
-	  <script src="js/tolstoy.js"></script>
 	</body>
 
 </html>
