refactored CSS and tidied up layout

--- a/index.html
+++ b/index.html
@@ -13,58 +13,70 @@
 		 <!-- Latest Sortable -->
 		<script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
 
-		<div class="container-fluid">
+		<div class="container-fluid sort-columns">
 
 		<h1>Sort-and-Peace</h1>
 
 			<div class="row">
 				<div class="col-xs-6 col-sm-4">
-					<div id="droppierre"><h6>pierre</h6></div>
 				</div>
 				<div class="col-xs-6 col-sm-4">
-					<div id="dropnatasha"><h6>natasha</h6></div>
 				</div>
 				<div class="col-xs-6 col-sm-4">
-					<div id="dropandrei"><h6>andrei</h6></div>
 				</div>
 				</div>
 			</div>
 		</div>
 
 
-		<div class="container-fluid">
+		<div class="container-fluid sort-columns">
 			<div class="row">
 
 				<div class="col-xs-6 col-sm-4">
-					<div id="pierre" class="photoarea">
+					<div id="droppierre">
+						<h6>drop pierre here</h6>
+					</div>
+					<div class="photoarea">
 						<h3>Pierre</h3>
+						<div id="pierre">
 							<img class="img-circle" src="img/1956_pierre.jpg">
 							<img class="img-circle" src="img/1967_pierre.jpg">
 							<img class="img-circle" src="img/1972_pierre.jpg">
 							<img class="img-circle" src="img/2007_pierre.jpg">
 							<img class="img-circle" src="img/2016_pierre.png">
+						</div>
 					</div>
 				</div>
 
 				<div class="col-xs-6 col-sm-4">
-					<div id="natasha" class="photoarea">
+					<div id="dropnatasha">
+						<h6>drop natasha here</h6>
+					</div>
+					<div class="photoarea">
 						<h3>Natasha</h3>
+						<div id="natasha">
 							<img class="img-circle" src="img/1956_natasha.jpg">
 							<img class="img-circle" src="img/1967_natasha.jpg">
 							<img class="img-circle" src="img/1972_natasha.jpg">
 							<img class="img-circle" src="img/2007_natasha.jpg">
 							<img class="img-circle" src="img/2016_natasha.jpg">
+						</div>
 					 </div>
 				</div>
 
 				<div class="col-xs-6 col-sm-4">
-					<div id="andrei" class="photoarea">
+					<div id="dropandrei">
+						<h6>drop andrei here</h6>
+					</div>
+					<div class="photoarea">
 						<h3>Andrei</h3>
+						<div id="andrei">
 							<img class="img-circle" src="img/1956_andrei.jpg">
 							<img class="img-circle" src="img/1967_andrei.jpg">
 							<img class="img-circle" src="img/1972_andrei.jpg">
 							<img class="img-circle" src="img/2007_andrei.jpg">
 							<img class="img-circle" src="img/2016_andrei.png">
+						</div>
 					</div>
 				</div>
 
