placeholder text is removed when photo is dropped into the drop area

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<link rel="stylesheet" href="css/tolstoy.css"/>
 		 <!-- Latest Sortable -->
 		<script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
+		<!-- MathJS -->
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.0.0/math.min.js"></script>
 
 		<div class="container-fluid sort-columns">
 		<h1>Sort-and-Peace</h1>
@@ -19,7 +21,7 @@
 
 				<div class="col-xs-6 col-sm-4">
 					<div id="droppierre">
-						<h6>drop pierre here</h6>
+						<div id="placeholderpierre">drop pierre here</div>
 					</div>
 					<div class="photoarea">
 						<h3>Pierre</h3>
@@ -35,7 +37,7 @@
 
 				<div class="col-xs-6 col-sm-4">
 					<div id="dropnatasha">
-						<h6>drop natasha here</h6>
+						<div id="placeholdernatasha">drop natasha here</div>
 					</div>
 					<div class="photoarea">
 						<h3>Natasha</h3>
@@ -51,7 +53,7 @@
 
 				<div class="col-xs-6 col-sm-4">
 					<div id="dropandrei">
-						<h6>drop andrei here</h6>
+						<div id="placeholderandrei">drop andrei here</div>
 					</div>
 					<div class="photoarea">
 						<h3>Andrei</h3>
