standard age deviation functionality on photo drop, with truncated decimals

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<div id="droppierre">
 						<div id="placeholderpierre">drop pierre here</div>
 					</div>
+					<div id='PierresDeviation'></div>
 					<div class="photoarea">
 						<h3>Pierre</h3>
 						<div id="pierre">
@@ -39,6 +40,7 @@
 					<div id="dropnatasha">
 						<div id="placeholdernatasha">drop natasha here</div>
 					</div>
+					<div id='NatashasDeviation'></div>
 					<div class="photoarea">
 						<h3>Natasha</h3>
 						<div id="natasha">
@@ -55,6 +57,7 @@
 					<div id="dropandrei">
 						<div id="placeholderandrei">drop andrei here</div>
 					</div>
+					<div id='AndreisDeviation'></div>
 					<div class="photoarea">
 						<h3>Andrei</h3>
 						<div id="andrei">
