correct alt image tag displayed underneath photo when dropped

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 					<div class="photoarea">
 						<h3>Pierre</h3>
 						<div id="pierre">
-							<img class="img-circle" src="img/1956_pierre.jpg">
-							<img class="img-circle" src="img/1967_pierre.jpg">
-							<img class="img-circle" src="img/1972_pierre.jpg">
-							<img class="img-circle" src="img/2007_pierre.jpg">
-							<img class="img-circle" src="img/2016_pierre.png">
+							<img class="img-circle" src="img/1956_pierre.jpg" alt="Henry Fonda">
+							<img class="img-circle" src="img/1967_pierre.jpg" alt="Sergei Bondarchuk">
+							<img class="img-circle" src="img/1972_pierre.jpg" alt="Anthony Hopkins">
+							<img class="img-circle" src="img/2007_pierre.jpg" alt="Alexander Beyer">
+							<img class="img-circle" src="img/2016_pierre.png" alt="Paul Dano">
 						</div>
 					</div>
 				</div>
@@ -44,11 +44,11 @@
 					<div class="photoarea">
 						<h3>Natasha</h3>
 						<div id="natasha">
-							<img class="img-circle" src="img/1956_natasha.jpg">
-							<img class="img-circle" src="img/1967_natasha.jpg">
-							<img class="img-circle" src="img/1972_natasha.jpg">
-							<img class="img-circle" src="img/2007_natasha.jpg">
-							<img class="img-circle" src="img/2016_natasha.jpg">
+							<img class="img-circle" src="img/1956_natasha.jpg" alt="Audrey Hepburn">
+							<img class="img-circle" src="img/1967_natasha.jpg" alt="Ludmila Savelyeva">
+							<img class="img-circle" src="img/1972_natasha.jpg" alt="Morag Hood">
+							<img class="img-circle" src="img/2007_natasha.jpg" alt="Clémence Poésy">
+							<img class="img-circle" src="img/2016_natasha.jpg" alt="Lily James">
 						</div>
 					 </div>
 				</div>
@@ -61,11 +61,11 @@
 					<div class="photoarea">
 						<h3>Andrei</h3>
 						<div id="andrei">
-							<img class="img-circle" src="img/1956_andrei.jpg">
-							<img class="img-circle" src="img/1967_andrei.jpg">
-							<img class="img-circle" src="img/1972_andrei.jpg">
-							<img class="img-circle" src="img/2007_andrei.jpg">
-							<img class="img-circle" src="img/2016_andrei.png">
+							<img class="img-circle" src="img/1956_andrei.jpg" alt="Mel Ferrer">
+							<img class="img-circle" src="img/1967_andrei.jpg" alt="Vyacheslav Tikhonov">
+							<img class="img-circle" src="img/1972_andrei.jpg" alt="Alan Dobie">
+							<img class="img-circle" src="img/2007_andrei.jpg" alt="Alessio Boni">
+							<img class="img-circle" src="img/2016_andrei.png" alt="James Norton">
 						</div>
 					</div>
 				</div>
