actor age extracted from data-* HMTL element, used to calculate standard deviation & displayed under drop area

--- a/index.html
+++ b/index.html
@@ -1,81 +1,81 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-	  <meta charset="utf-8">
-	  <title>Sort-and-Peace</title>
-	</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Sort-and-Peace</title>
+  </head>
 
-	<body>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/vendor/bootstrap.min.css"/>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/flat-ui.css"/>
-		<link rel="stylesheet" href="css/tolstoy.css"/>
-		 <!-- Latest Sortable -->
-		<script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
-		<!-- MathJS -->
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.0.0/math.min.js"></script>
+  <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/vendor/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/flat-ui.css"/>
+    <link rel="stylesheet" href="css/tolstoy.css"/>
+     <!-- Latest Sortable -->
+    <script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
+    <!-- MathJS -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/mathjs/3.0.0/math.min.js"></script>
 
-		<div class="container-fluid sort-columns">
-		<h1>Sort-and-Peace</h1>
-			<div class="row">
+    <div class="container-fluid sort-columns">
+    <h1>Sort-and-Peace</h1>
+      <div class="row">
 
-				<div class="col-xs-6 col-sm-4">
-					<div id="droppierre">
-						<div id="placeholderpierre">drop pierre here</div>
-					</div>
-					<div id='PierresDeviation'></div>
-					<div class="photoarea">
-						<h3>Pierre</h3>
-						<div id="pierre">
-							<img class="img-circle" src="img/1956_pierre.jpg" alt="Henry Fonda">
-							<img class="img-circle" src="img/1967_pierre.jpg" alt="Sergei Bondarchuk">
-							<img class="img-circle" src="img/1972_pierre.jpg" alt="Anthony Hopkins">
-							<img class="img-circle" src="img/2007_pierre.jpg" alt="Alexander Beyer">
-							<img class="img-circle" src="img/2016_pierre.png" alt="Paul Dano">
-						</div>
-					</div>
-				</div>
+        <div class="col-xs-6 col-sm-4">
+          <div id="droppierre">
+            <div id="placeholderpierre">drop pierre here</div>
+          </div>
+          <div id='PierresDeviation'></div>
+          <div class="photoarea">
+            <h3>Pierre</h3>
+            <div id="pierre">
+              <img class="img-circle" src="img/1956_pierre.jpg" alt="Henry Fonda" data-age="51">
+              <img class="img-circle" src="img/1967_pierre.jpg" alt="Sergei Bondarchuk" data-age="47">
+              <img class="img-circle" src="img/1972_pierre.jpg" alt="Anthony Hopkins" data-age="34">
+              <img class="img-circle" src="img/2007_pierre.jpg" alt="Alexander Beyer" data-age="34">
+              <img class="img-circle" src="img/2016_pierre.png" alt="Paul Dano" data-age="31">
+            </div>
+          </div>
+        </div>
 
-				<div class="col-xs-6 col-sm-4">
-					<div id="dropnatasha">
-						<div id="placeholdernatasha">drop natasha here</div>
-					</div>
-					<div id='NatashasDeviation'></div>
-					<div class="photoarea">
-						<h3>Natasha</h3>
-						<div id="natasha">
-							<img class="img-circle" src="img/1956_natasha.jpg" alt="Audrey Hepburn">
-							<img class="img-circle" src="img/1967_natasha.jpg" alt="Ludmila Savelyeva">
-							<img class="img-circle" src="img/1972_natasha.jpg" alt="Morag Hood">
-							<img class="img-circle" src="img/2007_natasha.jpg" alt="Clémence Poésy">
-							<img class="img-circle" src="img/2016_natasha.jpg" alt="Lily James">
-						</div>
-					 </div>
-				</div>
+        <div class="col-xs-6 col-sm-4">
+          <div id="dropnatasha">
+            <div id="placeholdernatasha">drop natasha here</div>
+          </div>
+          <div id='NatashasDeviation'></div>
+          <div class="photoarea">
+            <h3>Natasha</h3>
+            <div id="natasha">
+              <img class="img-circle" src="img/1956_natasha.jpg" alt="Audrey Hepburn" data-age="27">
+              <img class="img-circle" src="img/1967_natasha.jpg" alt="Ludmila Savelyeva" data-age="25">
+              <img class="img-circle" src="img/1972_natasha.jpg" alt="Morag Hood" data-age="30">
+              <img class="img-circle" src="img/2007_natasha.jpg" alt="Clémence Poésy" data-age="25">
+              <img class="img-circle" src="img/2016_natasha.jpg" alt="Lily James" data-age="26">
+            </div>
+           </div>
+        </div>
 
-				<div class="col-xs-6 col-sm-4">
-					<div id="dropandrei">
-						<div id="placeholderandrei">drop andrei here</div>
-					</div>
-					<div id='AndreisDeviation'></div>
-					<div class="photoarea">
-						<h3>Andrei</h3>
-						<div id="andrei">
-							<img class="img-circle" src="img/1956_andrei.jpg" alt="Mel Ferrer">
-							<img class="img-circle" src="img/1967_andrei.jpg" alt="Vyacheslav Tikhonov">
-							<img class="img-circle" src="img/1972_andrei.jpg" alt="Alan Dobie">
-							<img class="img-circle" src="img/2007_andrei.jpg" alt="Alessio Boni">
-							<img class="img-circle" src="img/2016_andrei.png" alt="James Norton">
-						</div>
-					</div>
-				</div>
+        <div class="col-xs-6 col-sm-4">
+          <div id="dropandrei">
+            <div id="placeholderandrei">drop andrei here</div>
+          </div>
+          <div id='AndreisDeviation'></div>
+          <div class="photoarea">
+            <h3>Andrei</h3>
+            <div id="andrei" data-age-number="66">
+              <img class="img-circle" src="img/1956_andrei.jpg" alt="Mel Ferrer" data-age="39">
+              <img class="img-circle" src="img/1967_andrei.jpg" alt="Vyacheslav Tikhonov" data-age="39">
+              <img class="img-circle" src="img/1972_andrei.jpg" alt="Alan Dobie" data-age="40">
+              <img class="img-circle" src="img/2007_andrei.jpg" alt="Alessio Boni" data-age="41">
+              <img class="img-circle" src="img/2016_andrei.png" alt="James Norton" data-age="30">
+            </div>
+          </div>
+        </div>
 
-			</div>
+      </div>
 
-		</div>
-		
-		<script src="js/tolstoy.js"></script>
+    </div>
+    
+    <script src="js/tolstoy.js"></script>
 
-	</body>
+  </body>
 
 </html>
